<resources>
    <string name="app_name">Leistungen</string>
    <string name="action_module_catalog">Modulhandbuch</string>
    <string name="add">Leistung anlegen</string>
    <string name="stats">Statistik</string>

    <string name="no_record">Keine Leistungen</string>

    <string name="module_num">Modulnummer</string>
    <string name="module_name">Modulname</string>
    <string name="semester">Semester</string>
    <string name="crp">Credit Points</string>
    <string name="note">Note in %</string>
    <string name="save">Speichern</string>
    <string name="gewichtung">50% Gewichtung</string>
    <string name="close">Schließen</string>

    <string name="module_name_not_empty">Modulname darf nicht leer sein!</string>
    <string name="module_num_not_empty">Modulnummer darf nicht leer sein!</string>
    <string name="credit_points_not_empty">Credit Points dürfen nicht leer sein!</string>
    <string name="credit_points_not_number">Credit Points müssen eine Zahl sein!</string>
    <string name="credit_points_not_valid">Credit Points müssen eine positive Zahl sein!</string>
    <string name="credit_points_to_big">Credit Points können nur bis max. 15 gehen!</string>
    <string name="mark_not_empty">Note darf nicht leer sein!</string>
    <string name="mark_not_number">Note muss eine Zahl sein!</string>
    <string name="mark_not_valid">Note kann nicht über 100% liegen!</string>
    <string name="sommersemester">Sommersemester</string>


    <string name="test">Test-String</string>
    <string name="send_email">Leistungen als E-Mail versenden</string>
    <string name="delete_records">Leistungen löschen</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="choose_module">Modul wählen</string>
    <string name="progress_text">berechne Statistik …</string>
    <string name="show_details">Details anzeigen</string>
    <string name="header_avarage_mark">Gesamtnote aus %d Leistungen</string>
    <string name="action_search">Leistung suchen</string>

    <string name="refresh_modules">Moduldaten aktualisieren</string>
    <string name="check_server_data">Prüfe Serverdaten</string>
    <string name="loading_new_data">Neue Daten werden geladen</string>
    <string name="loaded_new_data_success">Neue Daten erfolgreich geladen</string>
</resources>

